Templates für alle verkauf seiten fertiggestellt
verkauf pc css verschwunden

--- a/views/verkauf_notebook_logged.ejs
+++ b/views/verkauf_notebook_logged.ejs
@@ -23,9 +23,7 @@
 	
 	
 	
-	<!--Logout Buuton-->
-
-			
+	<!--Logout Buuton-->	
 	<a href="/logout" class="logout">Log---out</a>
 	
 	<!--Suchleiste-->
@@ -43,31 +41,33 @@
 		  </div>
 		</div>
 		
-		<div class="monitorbutton">
-		<button id="myBtn2" class="dropbtn2">Monitor</button>
-		  <div id="myDropdown2" class="monitorbutton-content2">
-			<a href="verkauf_4k.html">4k</a>
-			<a href="verkauf_fullhd.html">Full-HD</a>
+		<div class="tvbutton">
+		<button id="myBtn2" class="dropbtn2">TV + Audio</button>
+		  <div id="myDropdown2" class="tvbutton-content2">
+			<a href="verkauf_monitor">Monitore</a>
+			<a href="verkauf_fernseher">Fernseher</a>
+			<a href="verkauf_heimkino">Heimkino</a>
 		  </div>
 		</div>
 		
 		<div class="zubehoerbutton">
 		<button id="myBtn3" class="dropbtn3">Zubehoer</button>
 		  <div id="myDropdown3" class="zubehoerbutton-content3">
-			<a href="verkauf_maus.html">Maus</a>
-			<a href="verkauf_tastatur.html">Tastatur</a>
-			<a href="verkauf_kabel.html">Kabel</a>
+			<a href="verkauf_maus">Maus</a>
+			<a href="verkauf_tastatur">Tastatur</a>
+			<a href="verkauf_kabel">Kabel</a>
 		  </div>
 		</div>
 		
 		<div class="konsolenbutton">
 		<button id="myBtn4" class="dropbtn4">Konsolen</button>
 		  <div id="myDropdown4" class="konsolenbutton-content4">
-			<a href="verkauf_ps.html">PlayStation</a>
-			<a href="verkauf_xbox.html">XBOX</a>
-			<a href="verkauf_nintendo.html">Nintendo</a>
+			<a href="verkauf_ps">PlayStation</a>
+			<a href="verkauf_xbox">XBOX</a>
+			<a href="verkauf_nintendo">Nintendo</a>
 		  </div>
 		</div>
+
 
 	<script>
 		// Get the button, and when the user clicks on it, execute myFunction
@@ -163,7 +163,7 @@
 		Intel Core i5-6200U, <br>4 GB RAM, 256 GB SSD, Windows 10,
 		Schwarz
 	</h7>
-	
+
 	
 	<table id="table1">
 		<tr>
@@ -207,8 +207,10 @@
 	<div id="trennlinie3">&nbsp;</div>
 	
 	
-	
 	<a href="" class="warenkorb" id="ultslimnotebook"> In den Warenkorb</a>
+	
+	
+	
 	<!--Kiebell Laptop------------------------>
 	<!--zweites Produkt------->
 	<img src="images/Kiebel Gaming Laptop Ultra 7.0 [181167].jpg" id="kiebellaptop" width="300" height="250">
@@ -258,13 +260,71 @@
 	
 	<h11>2.499.-</h11>
 
-	<a href="" class="warenkorb" id="kiebelwarenkorb"> In den Warenkorb</a>
 	
 	<div id="trennlinie4">&nbsp;</div>
 	<div id="trennlinie5">&nbsp;</div>
 	<div id="trennlinie6">&nbsp;</div>
 	
+	<a href="" class="warenkorb" id="kiebelwarenkorb"> In den Warenkorb</a>
+		
+	<!--Lenovo Laptop------------------------>
+	<!--drittes Produkt------->
+	<img src="images/Lenov Yoga.jpg" id="lenovolaptop" width="300" height="250">
 	
+	<h17>Lenovo Yoga 520 35,6 cm (14,0 Zoll Full HD IPS Touch) Slim Convertible
+		Notebook<br>(Intel Core i5-7200U Dual-Core,
+		8 GB RAM, 256 GB SSD, Intel HD Graphics 620)</h17>
+	
+	
+	<table id="table3">
+		<tr>
+			<th>Marke</th>
+			<td>Lenovo</td>	
+		</tr>
+		<tr>
+			<th>Modell/Serie</th>
+			<td>520</td>			
+		</tr>
+		<tr>
+			<th>Bildschirmdiagonale (Zoll)</th>
+			<td>14 Zoll</td>			
+		</tr>
+		<tr>
+			<th>Betriebssystem</th>
+			<td>Windows 10 Home</td>			
+		</tr>	
+		<tr>
+			<th>Prozessor</th>
+			<td>Intel Core i5-7200U 2 x 2.5 GHz</td>			
+		</tr>
+		<tr>
+			<th>Arbeitsspeicher-Größe</th>
+			<td>8 GB</td>
+		<tr>
+			<th>Festplattenkapazität</th>
+			<td>256 GB</td>			
+		</tr>
+		<tr>
+			<th>Beschreibung Grafikkarte</th>
+			<td>Intel HD Graphics 620</td>			
+		</tr>
+		</tr>		
+	</table>
+	
+	<h18>749.-</h18>
+	
+
+	
+	<div id="trennlinie7">&nbsp;</div>
+	<div id="trennlinie8">&nbsp;</div>
+	<div id="trennlinie9">&nbsp;</div>
+			
+		
+		
+	<a href="" class="warenkorb" id="lenovowarenkorb"> In den Warenkorb</a>	
+		
+		
+		
 	<h16>Willkommen, <%= username %></h16>   
 	
 	
