--- a/views/verkauf_pc_logged.ejs
+++ b/views/verkauf_pc_logged.ejs
@@ -42,29 +42,30 @@
 		  </div>
 		</div>
 		
-		<div class="monitorbutton">
-		<button id="myBtn2" class="dropbtn2">Monitor</button>
-		  <div id="myDropdown2" class="monitorbutton-content2">
-			<a href="verkauf_4k.html">4k</a>
-			<a href="verkauf_fullhd.html">Full-HD</a>
+		<div class="tvbutton">
+		<button id="myBtn2" class="dropbtn2">TV + Audio</button>
+		  <div id="myDropdown2" class="tvbutton-content2">
+			<a href="verkauf_monitor">Monitore</a>
+			<a href="verkauf_fernseher">Fernseher</a>
+			<a href="verkauf_heimkino">Heimkino</a>
 		  </div>
 		</div>
 		
 		<div class="zubehoerbutton">
 		<button id="myBtn3" class="dropbtn3">Zubehoer</button>
 		  <div id="myDropdown3" class="zubehoerbutton-content3">
-			<a href="verkauf_maus.html">Maus</a>
-			<a href="verkauf_tastatur.html">Tastatur</a>
-			<a href="verkauf_kabel.html">Kabel</a>
+			<a href="verkauf_maus">Maus</a>
+			<a href="verkauf_tastatur">Tastatur</a>
+			<a href="verkauf_kabel">Kabel</a>
 		  </div>
 		</div>
 		
 		<div class="konsolenbutton">
 		<button id="myBtn4" class="dropbtn4">Konsolen</button>
 		  <div id="myDropdown4" class="konsolenbutton-content4">
-			<a href="verkauf_ps.html">PlayStation</a>
-			<a href="verkauf_xbox.html">XBOX</a>
-			<a href="verkauf_nintendo.html">Nintendo</a>
+			<a href="verkauf_ps">PlayStation</a>
+			<a href="verkauf_xbox">XBOX</a>
+			<a href="verkauf_nintendo">Nintendo</a>
 		  </div>
 		</div>
 
@@ -161,7 +162,7 @@
 	</h12>
 	
 	
-	<table id="table3">
+	<table id="table1">
 		<tr>
 			<th>Marke</th>
 			<td>MSI</td>	
@@ -216,7 +217,7 @@
 	</h14>
 	
 	
-	<table id="table4">
+	<table id="table2">
 		<tr>
 			<th>Marke</th>
 			<td>Kiebel</td>	
@@ -262,27 +263,56 @@
 	
 	<!--drittes Produkt------->
 	
+	<img src="images/Kiebel Gamer-PC [184551].jpg" id="kiebelpc" width="300" height="250">
+
+	<h19>Kiebel Gamer-PC [184551] 
+	AMD Achtkerner FX8300 8x 3.3GHz (Turbo bis 4.2GHz) <br> 16GB DDR3 HyperX | ASUS |
+	240GB SSD + 1TB | NVIDIA GTX 1060 6GB DDR5
+	| DVD <br> Sound | LAN | Windows 10 | Computer</h19>
+	
+	<table id="table3">
+		<tr>
+			<th>Marke</th>
+			<td>Kiebel</td>	
+		</tr>
+		<tr>
+			<th>Modell/Serie</th>
+			<td>520</td>			
+		</tr>
+		<tr>
+			<th>Bildschirmdiagonale (Zoll)</th>
+			<td>14 Zoll</td>			
+		</tr>
+		<tr>
+			<th>Betriebssystem</th>
+			<td>Windows 10 Home</td>			
+		</tr>	
+		<tr>
+			<th>Prozessor</th>
+			<td>Intel Core i5-7200U 2 x 2.5 GHz</td>			
+		</tr>
+		<tr>
+			<th>Arbeitsspeicher-Größe</th>
+			<td>8 GB</td>
+		<tr>
+			<th>Festplattenkapazität</th>
+			<td>256 GB</td>			
+		</tr>
+		<tr>
+			<th>Beschreibung Grafikkarte</th>
+			<td>Intel HD Graphics 620</td>			
+		</tr>
+		</tr>		
+	</table>
+
+	<h20>899.-</h20>
+
+	
+	<div id="trennlinie7">&nbsp;</div>
 	<div id="trennlinie8">&nbsp;</div>
+	<div id="trennlinie9">&nbsp;</div>	
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+	<a href="" class="warenkorb" id="kiebelpcwarenkorb"> In den Warenkorb</a>
 	
 	<h16>Willkommen, <%= username %></h16>  	
 	
