--- a/views/logged.ejs
+++ b/views/logged.ejs
@@ -18,7 +18,7 @@
 	
 	<!--Warenkorb Logo--->
 	<img src="images/warenkorb.png" id="warenkorb_logo"; width="200" height="200">
-	<a href="/" class="warenkorb_logo" method = "post">Warenkorb</a>
+	<a href="/warenkorb" class="warenkorb_logo" method = "post">Warenkorb</a>
 	
 	
 	
@@ -154,11 +154,8 @@
 	<a  href="saleoftheday.html">
 		<img src="images/saleoftheday.png" id="saleoftheday" width="600" height="400">
 	</a>
+	<img src="images/pesudoaids slogan unten.jpg" id="slogan" >
 	
-	<br>
-	<br>
-	<br>
-	<br><br>
 	
 		<h16>Willkommen, <%= username %></h16>  	
 	
