--- a/views/verkauf_monitor_logged.ejs
+++ b/views/verkauf_monitor_logged.ejs
@@ -24,7 +24,7 @@
 	
 	
 	<!--Logout Buuton-->	
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
@@ -151,7 +151,7 @@
 	<!--Von <head> bis </footer> kann so übernommen werden----------->
 	<!-------------------------MAIN----------------------------------->
 	
-	<!-----MAIN---------------------------------------------->
+
 	
 	<!--Erstes Produkt------->
 	
@@ -199,7 +199,7 @@
 		
 	</table>
 	
-	<h8>119,99,-</h8>
+	<h8>119,99.-</h8>
 	<div id="trennlinie1">&nbsp;</div>
 	<div id="trennlinie2">&nbsp;</div>
 	<div id="trennlinie3">&nbsp;</div>
