--- a/views/verkauf_notebook_logged.ejs
+++ b/views/verkauf_notebook_logged.ejs
@@ -24,7 +24,7 @@
 	
 	
 	<!--Logout Buuton-->	
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
@@ -163,7 +163,8 @@
 		Intel Core i5-6200U, <br>4 GB RAM, 256 GB SSD, Windows 10,
 		Schwarz
 	</h7>
-
+	
+	
 	
 	<table id="table1">
 		<tr>
@@ -324,8 +325,7 @@
 	<a href="" class="warenkorb" id="lenovowarenkorb"> In den Warenkorb</a>	
 		
 		
-		
-	<h16>Willkommen, <%= username %></h16>   
+	
 	
 	
 	
