--- a/views/verkauf_pc_logged.ejs
+++ b/views/verkauf_pc_logged.ejs
@@ -26,7 +26,7 @@
 	<!--Logout Buuton-->
 
 			
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
@@ -157,9 +157,9 @@
 	
 	<img src="images/CSL Multimedia PC Sprint 5845Pro (Quad) inkl. WIN 7 Pro.jpg" id="cslpcpic" width="230" height="250">
 	
-	<h12>CSL Multimedia PC Sprint 5845Pro (Quad) inkl. Windows 7 Professional<br>
+	<h7>CSL Multimedia PC Sprint 5845Pro (Quad) inkl. Windows 7 Professional<br>
 	AMD A10-9700 4x 3500 MHz, 8 GB RAM, 1000 GB SATA, Radeon R7, DVD-RW,<br> Gigabit LAN, USB 3.1
-	</h12>
+	</h7>
 	
 	
 	<table id="table1">
@@ -198,7 +198,7 @@
 		
 	</table>
 	
-	<h13>419,-</h13>
+	<h8>419,-</h8>
 	<div id="trennlinie1">&nbsp;</div>
 	<div id="trennlinie2">&nbsp;</div>
 	<div id="trennlinie3">&nbsp;</div>
@@ -210,11 +210,11 @@
 	
 	<img src="images/Ankermann-PC Wildrabbit GAMER.jpg" id="ankermannpc" width="230" height="250">
 	
-	<h14>
+	<h10>
 		Ankermann-PC WildRabbit GAMER, AMD 950 4x 3.50GHz, 
 		Zotac GeForce GTX 1060 6GB,<br> 8GB DDR4 2400, 1TB HDD, 
 		Microsoft Windows 10 Professional, EAN 4260409311688
-	</h14>
+	</h10>
 	
 	
 	<table id="table2">
@@ -252,7 +252,7 @@
 		</tr>		
 	</table>
 	
-	<h15>819.-</h15>
+	<h11>819.-</h11>
 
 	<a href="" class="warenkorb" id="ankermannpcwarenkorb"> In den Warenkorb</a>
 	
@@ -265,10 +265,10 @@
 	
 	<img src="images/Kiebel Gamer-PC [184551].jpg" id="kiebelpc" width="300" height="250">
 
-	<h19>Kiebel Gamer-PC [184551] 
+	<h17>Kiebel Gamer-PC [184551] 
 	AMD Achtkerner FX8300 8x 3.3GHz (Turbo bis 4.2GHz) <br> 16GB DDR3 HyperX | ASUS |
 	240GB SSD + 1TB | NVIDIA GTX 1060 6GB DDR5
-	| DVD <br> Sound | LAN | Windows 10 | Computer</h19>
+	| DVD <br> Sound | LAN | Windows 10 | Computer</h17>
 	
 	<table id="table3">
 		<tr>
@@ -305,7 +305,7 @@
 		</tr>		
 	</table>
 
-	<h20>899.-</h20>
+	<h18>899.-</h18>
 
 	
 	<div id="trennlinie7">&nbsp;</div>
@@ -314,7 +314,6 @@
 	
 	<a href="" class="warenkorb" id="kiebelpcwarenkorb"> In den Warenkorb</a>
 	
-	<h16>Willkommen, <%= username %></h16>  	
 	
 	</body>
 </html>
