--- a/views/verkauf_ps_logged.ejs
+++ b/views/verkauf_ps_logged.ejs
@@ -24,7 +24,7 @@
 	
 	
 	<!--Logout Buuton-->	
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
@@ -300,7 +300,9 @@
 	</table>
 	
 	<h18>399.-</h18>
+	<h19>299.-</h19>
 	
+	<img src="images/redRow.png" id="redRow">
 
 	
 	<div id="trennlinie7">&nbsp;</div>
@@ -310,7 +312,6 @@
 	<a href="" class="warenkorb" id="ps4prowarenkorb"> In den Warenkorb</a>
 
 	
-	<h16>Willkommen, <%= username %></h16> 
 	
 	
 	</body>
