--- a/views/verkauf_tastatur_logged.ejs
+++ b/views/verkauf_tastatur_logged.ejs
@@ -24,7 +24,7 @@
 	
 	
 	<!--Logout Buuton-->	
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
@@ -311,9 +311,7 @@
 	
 	<div class="popupwarenkorb3" onclick="warenkorbFunkt3()">In den Warenkorb
 		<span class="warenkorb" id="warenkorb3">Anmeldung erforderlich!</span>
-	</div>
-
-	<h16>Willkommen, <%= username %></h16>  
+	</div> 
 	
 	
 	
