--- a/views/verkauf_kabel_logged.ejs
+++ b/views/verkauf_kabel_logged.ejs
@@ -24,7 +24,7 @@
 	
 	
 	<!--Logout Buuton-->	
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
@@ -309,7 +309,7 @@
 	<a href="" class="warenkorb" id="v7kabelwarenkorb"> In den Warenkorb</a>
 
 	
-	<h16>Willkommen, <%= username %></h16>  
+	
 	
 	
 	</body>
