--- a/views/verkauf_maus_logged.ejs
+++ b/views/verkauf_maus_logged.ejs
@@ -24,7 +24,7 @@
 	
 	
 	<!--Logout Buuton-->
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
@@ -307,9 +307,6 @@
 	<a href="" class="warenkorb" id="microsoftmauswarenkorb"> In den Warenkorb</a>
 	
 	
-	
-	
-	<h16>Willkommen, <%= username %></h16> 
 	
 	
 	
