--- a/views/verkauf_nintendo_logged.ejs
+++ b/views/verkauf_nintendo_logged.ejs
@@ -24,7 +24,7 @@
 	
 	
 	<!--Logout Buuton-->	
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
