--- a/views/verkauf_xbox_logged.ejs
+++ b/views/verkauf_xbox_logged.ejs
@@ -24,7 +24,7 @@
 	
 	
 	<!--Logout Buuton-->	
-	<a href="/logout" class="logout">Log---out</a>
+	<a href="/logout" class="logout">Logout</a>
 	<!--Suchleiste-->
 	<input type="text" id="Suchen" name="Suchen" placeholder="Suche...">
 	<button type="Suchen" id="suchen">Suchen</button>
@@ -310,7 +310,7 @@ Spiele laufen besser | Natives 4K Gaming | Fortschrittlicher Multiplayer</td>
 	<a href="" class="warenkorb" id="xboxones1tbwarenkorb"> In den Warenkorb</a>
 
 	
-	<h16>Willkommen, <%= username %></h16>
+
 	
 	
 	</body>
