Letzte Schönheitsfehler behoben

--- a/views/verkauf_fernseher_logged.ejs
+++ b/views/verkauf_fernseher_logged.ejs
@@ -252,7 +252,8 @@
 	</table>
 	
 	<h11>1999.-</h11>
-
+	<h20>1092.-</h20>
+	<img src="images/redRow.png" id="redRow3">
 	
 	<div id="trennlinie4">&nbsp;</div>
 	<div id="trennlinie5">&nbsp;</div>
