--- a/views/verkauf_monitor_logged.ejs
+++ b/views/verkauf_monitor_logged.ejs
@@ -19,7 +19,7 @@
 	
 	<!--Warenkorb Logo--->
 	<img src="images/warenkorb.png" id="warenkorb_logo"; width="200" height="200">
-	<a href="/" class="warenkorb_logo" method = "post">Warenkorb</a>
+	<a href="/" class="warenkorb_logo"  method = "post">Warenkorb</a>
 	
 	
 	
@@ -151,6 +151,12 @@
 	<!--Von <head> bis </footer> kann so übernommen werden----------->
 	<!-------------------------MAIN----------------------------------->
 	
+	<div class="alert">
+		<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+		<strong>Artikel zum Warenkorb hinzugefuegt</strong>
+	</div>
+
+	
 
 	
 	<!--Erstes Produkt------->
@@ -200,6 +206,8 @@
 	</table>
 	
 	<h8>119,99.-</h8>
+	<h15>80.-</h15>
+	<img src="images/redRow.png" id="redRow2">
 	<div id="trennlinie1">&nbsp;</div>
 	<div id="trennlinie2">&nbsp;</div>
 	<div id="trennlinie3">&nbsp;</div>
