--- a/views/verkauf_notebook_logged.ejs
+++ b/views/verkauf_notebook_logged.ejs
@@ -260,7 +260,8 @@
 	</table>
 	
 	<h11>2.499.-</h11>
-
+	<h20>1992.-</h20>
+	<img src="images/redRow.png" id="redRow3">
 	
 	<div id="trennlinie4">&nbsp;</div>
 	<div id="trennlinie5">&nbsp;</div>
