--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,10 +1,19 @@
 @charset "UTF-8";
 
 /*  */
+
+h14{
+	position: absolute;
+	margin-top: -53.5%;
+	margin-left: 31%;
+	font-size: 70px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 div.gallery {
 	margin-left: 5%;
-	margin-top: -53%;
-    border: 1px solid #ccc;
+	margin-top: -49%;
+    border: 1px solid #ccc0;
     float: left;
     width: 270px;
 }
@@ -18,20 +27,19 @@ div.gallery img {
     width: 100%;
     height: auto;
 }
-
-div.desc {
+div.desc1 {
     padding: 15px;
     text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 div.gallery2 {
 	margin-left: 30%;
-	margin-top: -53%;
-    border: 1px solid #ccc;
+	margin-top: -49%;
+    border: 1px solid #ccc0;
     float: left;
-    width: 270px;
+    width: 15%;
     height: 250px;
-    background-color: 
 }
 div.gallery2:hover {
     border: 1px solid #777;
@@ -41,11 +49,15 @@ div.gallery2 img {
     width: 100%;
     height:auto;
 }
-
+div.desc2 {
+    padding: 15px;
+    text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+}
 div.gallery3 {
 	margin-left: 57%;
-	margin-top: -53%;
-    border: 1px solid #ccc;
+	margin-top: -50%;
+    border: 1px solid #ccc0;
     float: left;
     width: 270px;
     height: 250px;
@@ -58,11 +70,15 @@ div.gallery3 img {
     width: 100%;
     height: 83%;;
 }
-
+div.desc3 {
+    padding: 15px;
+    text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+}
 div.gallery4 {
 	margin-left: 83%;
-	margin-top: -53%;
-    border: 1px solid #ccc;
+	margin-top: -50%;
+    border: 1px solid #ccc0;
     float: left;
     width: 250px;
 }
@@ -74,7 +90,11 @@ div.gallery4 img {
     width: 100%;
     height: auto;
 }
-
+div.desc4 {
+    padding: 15px;
+    text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+}
 h16{
 	position: absolute;
 	margin-top: -111.5%;
@@ -1179,7 +1199,22 @@ h11{
 	height: 32%;;
 }
 
+#redRow3{
+	margin-top: -78.2%;
+	margin-left: 69%;
+	position: absolute;
+	height: 15%;
+	width: 15%;	
+}
 
+h20{
+	position: absolute;
+	margin-top: -74%;
+	margin-left: 75.3%;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 45px;
+	color: red;
+}
 /*Dritter Artikel-----------------------------------*/
 
 /* Popup container - can be anything you want */
@@ -1980,6 +2015,24 @@ h19{
     border: 2px solid rgba(0, 0, 0, 0.49);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#redRow2{
+	margin-top: -98.5%;
+	margin-left: 69%;
+	position: absolute;
+	height: 15%;
+	width: 15%;	
+}
+
+h15{
+	position: absolute;
+	margin-top: -94%;
+	margin-left: 77.3%;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 45px;
+	color: red;
+}
+
 /*Zweiter Artikel-----------------------------*/
 #asusmonitorpic{
 	position: absolute;
@@ -2211,4 +2264,24 @@ h19{
 	border: 1px solid rgb(255, 255, 255);
 }
 
+/*Benachrichtungen--------------------------------------*/
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+}
 
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
+}
